--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>@storybook/cli - Storybook</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    
+    <title>Redirecting...</title>
+    <link rel=canonical href="https://style.monday.com/style">
+    <meta http-equiv=refresh content="0; url=https://style.monday.com/style">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />    
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     
     <link
