--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Redirecting...</title>
-    <link rel=canonical href="https://style.monday.com/style">
-    <meta http-equiv=refresh content="0; url=https://style.monday.com/style">
+    <link rel=canonical href="https://style.monday.com">
+    <meta http-equiv=refresh content="0; url=https://style.monday.com">
     <meta name="viewport" content="width=device-width, initial-scale=1" />    
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
 <style>
